--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,21 +4,24 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Tour
-    url: tour
+  - name: Home
+    url: /#home
     weight: 10
   - name: News
-    url: post
+    url: /#news
     weight: 20
-  - name: People
+  - name: Team
     url: people
     weight: 30
-  - name: Events
+  - name: Research
     url: event
     weight: 40
   - name: Publications
     url: publication
     weight: 50
+  - name: Apply
+    url: tour
+    weight: 60
   - name: Contact
     url: contact
-    weight: 60
+    weight: 70
