--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,8 +17,9 @@ main:
     url: /#research
     weight: 40
   - name: Publications
-    url: publication
+    url: https://scholar.google.com/citations?user=v6YV1EcAAAAJ&hl=en
     weight: 50
+    external: true
   - name: Apply
     url: /#apply
     weight: 60
