--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,7 +17,7 @@ main:
     url: /#research
     weight: 40
   - name: Publications
-    url: publications
+    link: https://scholar.google.com/citations?user=v6YV1EcAAAAJ&hl=en
     weight: 50
   - name: Apply
     url: /#apply
