--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,7 +17,7 @@ main:
     url: /#research
     weight: 40
   - name: Publications
-    link: publications
+    url: publications
     weight: 50
   - name: Apply
     url: /#apply
